--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h2,
   padding: 0.5rem;
   list-style-type: none;
   margin-block: 0.2em;
+  cursor: pointer;
 }
 
 hr {
@@ -127,5 +128,8 @@ h1 {
   border: solid 2px black;
   border-radius: 5px;
   margin: 10% auto 0 auto;
-  padding: 1%;
+  padding: 2px 0 2px 6px;
+  font-weight: bold;
+  font-size: 1.2rem;
+
 }
