--- a/style.css
+++ b/style.css
@@ -1,39 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
 body {
   font-family: 'Comic Neue', cursive;
   font-size: 14px;
   line-height: 1.5;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 h2 {
   font-size: 2rem;
   margin-top: 20px;
+  text-align: center;
 }
 
 button {
+  display: flex;
   font-weight: bold;
   letter-spacing: 1px;
   padding: 0.4rem;
   border-radius: 6px;
-  margin-left: 16.8em;
+  margin-left: auto;
+  border: 0.125rem #333 solid;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
 
 input {
   padding: 0.3rem;
   margin-bottom: 10px;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-input,
-table {
   width: 100%;
+  border: 2px #333 solid;
+  border-radius: 6px;
+  outline: none;
+}
+
+input:focus,
+input:active {
+  border: 3px #333 solid;
+}
+
+.listSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-block: 20px;
+  height: 100%;
 }
 
 tr:nth-child(even) {
@@ -41,19 +65,9 @@ tr:nth-child(even) {
 }
 
 .all-books {
-  max-width: 32rem;
-  margin-bottom: 4rem;
-}
-
-button,
-input,
-.all-books {
-  border: 0.125rem #333 solid;
-}
-
-input,
-.all-books {
-  border-radius: 0.25rem;
+  width: 80%;
+  border: 2px #333 solid;
+  border-radius: 6px;
 }
 
 .book-container {
@@ -62,18 +76,9 @@ input,
   padding: 0.5rem;
 }
 
-h2,
-.form-title {
-  text-align: center;
-}
-
 .form {
-  max-width: 16rem;
+  max-width: 40%;
   box-sizing: border-box;
-}
-
-.all-books,
-.form {
   margin: 0 auto;
 }
 
@@ -83,9 +88,10 @@ h2,
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  margin: auto;
+  margin: 16px auto 0 auto;
   border: solid 2px black;
-  border-radius: 5px;
+  border-radius: 6px;
+  padding: 1px;
 }
 
 div#date {
@@ -99,46 +105,38 @@ div#date {
 .menu {
   font-weight: bold;
   font-size: 1.2rem;
-  width: 40%;
+  width: 20%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex: 0.5;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0.5rem;
   list-style-type: none;
-  margin-block: 0.2em;
+  margin: 0;
   cursor: pointer;
 }
 
 hr {
   border: 0.1rem solid #333;
-  height: 16px;
-  margin: 0.5rem auto;
+  height: 20px;
+  margin: 0 5px;
 }
 
 .logo {
   margin-left: 16px;
   text-decoration: none;
   color: black;
-}
-
-h1 {
   margin-block: 0.2em;
 }
 
-.contact-text {
-  text-align: center;
-  width: 50%;
-}
-
-.contactInfo {
-  width: 25%;
-  padding-top: 10px;
-}
-
-.contact-text,
-.contactInfo {
-  margin: 0 auto;
+.contactSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .footer {
@@ -147,11 +145,22 @@ h1 {
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  left: 2em;
   border: solid 2px black;
   border-radius: 5px;
-  margin: 10% auto 0 auto;
+  margin: 1% auto;
   padding: 2px 0 2px 6px;
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.listSection.hidden {
+  display: none;
+}
+
+.form.hidden {
+  display: none;
+}
+
+.contactSection.hidden {
+  display: none;
 }
